syntax = "proto3";

option csharp_namespace = "PaymentService.Proto";

package PaymentService;

import "google/protobuf/timestamp.proto";


service Pay {
  rpc Pay(PayRequest) returns (PayResponse);

}

message PayRequest {
	  string orderId = 1;
}


message PayResponse {

}